--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "structured-clone": "^0.2.2",
-    "swiper": "^11.2.1",
-    "vite": "^3.2.0"
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^5.0.3",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18"
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "vite": "^7.1.7"
   }
 }
